# mailing_service

./: data.json  pyproject.toml
blogApp/: forms.py  models.py  services.py  urls.py  views.py
blogApp/migrations/: 0001_initial.py  0002_blog_is_published.py  0002_initial.py  0003_blog_slug.py  0004_alter_blog_view_count.py  0005_alter_blog_at_published.py  0006_alter_blog_at_published.py  0007_blog_at_create.py  0008_alter_blog_at_published.py
config/: settings.py  urls.py
mailingApp/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
mailingApp/migrations/: 0001_initial.py  0002_alter_periodicity_periodicity.py  0002_initial.py  0002_remove_mailing_user_mailing_owner_massage_owner_and_more.py  0003_alter_mailing_options_alter_mailing_status.py  0003_alter_mailing_status.py  0003_alter_setting_status.py  0004_alter_client_options_alter_mailing_options_and_more.py  0004_alter_mailing_status.py  0004_remove_mailings_setting_alter_periodicity_options_and_more.py  0005_alter_mailing_status.py  0005_rename_periodicity_attempt_mailings_attempt_and_more.py  0006_alter_mailing_status.py  0006_rename_periodicity1_mailings_periodicity_and_more.py  0007_alter_mailing_status.py  0007_mailing_delete_mailings.py  0008_alter_mailing_at_end_alter_mailing_at_start_and_more.py  0008_alter_mailing_status.py  0009_alter_attempt_at_last_attempt_alter_mailing_at_end_and_more.py  0009_alter_mailing_status.py  0010_alter_mailing_status.py  0010_remove_mailing_attempt_attempt_mailing_and_more.py  (+5 more)
usersApp/: forms.py  models.py  services.py  urls.py  views.py
(+35 files in other folders)
