[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = ""
authors = ["denisbelenko <denisdel123@>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
ipython = "^8.22.2"
pillow = "^10.2.0"
psycopg2 = "^2.9.9"
python-dateutil = "^2.9.0.post0"
django-crontab = "^0.7.1"
transliterate = "^1.10.2"
redis = "^5.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
